# test-create-image

./: Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
