[project]
name = "gomonit_kafka"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["kafka-python>=2.0.2", "requests>=2.32.3", "pandas>=2.2.3", "sqlalchemy>=2.0.36", "psycopg2>=2.9.10", "psycopg2-binary>=2.9.10", "confluent-kafka>=2.7.0", "pytz>=2024.2"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
